--- a/src/pages/EventPage/EventPage.module.css
+++ b/src/pages/EventPage/EventPage.module.css
@@ -5,8 +5,8 @@
   /* overflow: scroll; */
   width: 100%;
   height: 100%;
-  padding: 25px;
   max-width: 100%;
+  padding: 0.5rem;
   border-radius: 20px;
   border-style: solid;
   border-width: 2px;
@@ -15,9 +15,37 @@
   display: flex;
 }
 .event_container {
+  overflow-y: auto;
   width: 50%;
-  padding: 1rem;
-  margin-right: 2rem;
+  padding: 0.5em;
+}
+
+/* Customize scrollbar */
+.event_container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.event_container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.event_container::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+.event_container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.actions {
+  display: flex;
+  gap: 1em;
+}
+
+.details {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .event_title {
@@ -41,22 +69,23 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  flex-wrap: wrap;
   margin-top: 1rem;
   padding: 0.2rem;
   padding-left: 0.2rem;
 }
 
 .chat_container {
-  padding: 1rem;
-  width: 50%;
+  width: auto;
+  padding-left: 0.5em;
   position: relative;
+  flex-grow: 1;
 }
 
 .content_wrapper > h3,
 .content_title {
   margin: 0;
   padding: 0.2rem 0.3rem;
-  font-weight: bold;
 }
 
 .content_title {
@@ -64,8 +93,8 @@
 }
 
 .content_wrapper > p {
-  margin: 0;
-  padding: 0.2rem 0.4rem;
+  margin: 0.2em;
+  padding: 0.2rem;
   margin-left: 0.4rem;
   border: 1px solid black;
   border-radius: 10px;
@@ -141,4 +170,24 @@
 
   font-size: 18px;
   color: #251134d8;
+}
+
+@media (max-width: 950px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .event_container {
+    width: 100%;
+    margin-bottom: 1rem;
+    max-height: 45%;
+  }
+  .chat_container {
+    width: 100%;
+    height: 60%;
+    padding-left: 0;
+  }
 }
