--- a/src/components/skeletons/SkeletonElement.module.css
+++ b/src/components/skeletons/SkeletonElement.module.css
@@ -23,3 +23,25 @@
   border-radius: 20px;
   padding: 0.5rem 1rem;
 }
+
+.skeleton.friendPreview {
+  margin-bottom: 10px;
+  margin-left: 10px;
+  padding: 1rem;  
+  height: fit-content;
+  border-radius: 10px;
+}
+
+.skeleton.profile {
+  border-radius: 100px;
+  height: 96px;
+  width: 96px;
+  margin: 0;
+}
+
+.event_preview {
+  margin: 1rem 0;
+  height: 207px;
+  width: 310px;
+  border-radius: 10px;
+}
