--- a/src/pages/UsersPage/UsersPage.module.css
+++ b/src/pages/UsersPage/UsersPage.module.css
@@ -41,3 +41,18 @@
   margin-top: 1.6rem;
   margin-right: 0.9rem;
 }
+
+.skeleton_users_container {
+  display: block;
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
+  width: 100%;
+  height: fit-content;
+  /* background-color: aquamarine; */
+}
+
+.skeleton_event_body {
+  position: relative;
+  overflow: hidden;
+} 
